<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/transparent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:id="@+id/scrollView1"
        android:background="@color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/termino1_title"
                android:textColor="@color/black_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/termino1" />
			           
            <TextView
                android:id="@+id/termino2"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino2" />
            
            <TextView
                android:id="@+id/termino3_title"
                android:layout_marginBottom="15dp"                
                android:textColor="@color/black_text"                
                android:textAlignment="gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino3" />
            
            <TextView
                android:id="@+id/termino4"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino4" />            

            <TextView
                android:id="@+id/termino5"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino5" />  
                
            <TextView
                android:id="@+id/termino6_title"
                android:layout_marginBottom="15dp"                
                android:textColor="@color/black_text"                
                android:textAlignment="gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino6" />   
                
            <TextView
                android:id="@+id/termino7"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino7" />              
            
            <TextView
                android:id="@+id/termino8"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino8" />
            
            <TextView
                android:id="@+id/termino9"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino9" />
            
            <TextView
                android:id="@+id/termino10"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino10" />
            
            <TextView
                android:id="@+id/termino11"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino11" /> 
                
            <TextView
                android:id="@+id/termino12_title"
                android:layout_marginBottom="15dp"                
                android:textColor="@color/black_text"                
                android:textAlignment="gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/termino12" />
            
            <TextView
                android:id="@+id/termino13"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/termino13" /> 
                
            <TextView
                android:id="@+id/termino14"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/termino14" /> 
                
            <TextView
                android:id="@+id/termino15"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/termino15" /> 
                
            <TextView
                android:id="@+id/termino16"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/termino16" /> 
                
            <TextView
                android:id="@+id/termino17"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/termino17" /> 
                
            <TextView
                android:id="@+id/termino18"
                android:textColor="@color/gray"
                android:textAlignment="gravity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/termino18" />             
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
