<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Main" >

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"         
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/progress_bar_margin_bottom" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/progress_bar_text_margin_bottom"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/img_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/img_bottom"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon" />

            <EditText                
                android:id="@+id/email"
                android:layout_marginBottom="@dimen/edit_botton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_marginTop="@dimen/edit_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button"
                style="@style/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/progress_bar_margin_top"
                android:text="@string/sign_in" />

        	<LinearLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="match_parent"
        	    android:layout_marginTop="@dimen/layout_creating_account"
        	    android:orientation="vertical" >

        		<TextView
        		    android:textSize="@dimen/subhead"
        		    android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
        		    android:layout_gravity="center"
        		    android:layout_marginBottom="@dimen/text_bottom"
        		    android:text="@string/new_ikut" />
        		        	    
        		<TextView
        		    android:id="@+id/creating_account"
       		    	android:textSize="@dimen/title"
        		    android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
        		    android:layout_gravity="center"
        		    android:layout_marginBottom="@dimen/text_bottom"
        		    android:text="@string/creating_account" />

        	</LinearLayout>
                    
        </LinearLayout>
       
    </ScrollView>
</merge>
